Add the 3rd box

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,5 +10,6 @@
 <body>
     <h1 class="box-one">One</h1>
     <h1 class="box-two">Two</h1>
+    <h1 class="box-three">D19123917<br>Jina Park</h1>
 </body>
 </html>
